# judge

./: .eslintrc.yml  .gitignore  .gitmodules  .snyk  .swcrc  .travis.yml  CMakeLists.txt  README.md  config-example.json  config-example.yaml  index.mjs  package.json  tsconfig.json
.github/workflows/: ci.yml
native/: builtin_checkers.cc
native/builtin_checkers/: binary.h  builtin_checkers.cc  floats.h  integers.h  lines.h
native/fs_native/: fs_native.cc
native/posix/: posix.cc
rootfs-update/: config-example.json  renameat2.c  update.sh
src/: compile.ts  config.ts  error.ts  file.ts  fsNative.ts  index.ts  omittableString.ts  posixUtils.ts  rpc.ts  run.ts  sandbox.ts  systemInfo.ts  taskQueue.ts  utils.ts
src/checkers/: builtin.ts  index.ts
src/checkers/custom/: domjudge.ts  hustoj.ts  index.ts  legacy.ts  lemon.ts  qduoj.ts  testlib.ts
src/languages/: c.ts  compile-java.sh  compile-python.sh  cpp.ts  csharp.ts  fsharp.ts  go.ts  haskell.ts  index.ts  java.ts  kotlin.ts  pascal.ts  python.ts  rust.ts  swift.ts
src/task/: index.ts
src/task/submission/: common.ts  index.ts  submissionFile.ts
src/task/submission/interaction/: index.ts  judgeInfo.ts
src/task/submission/submit-answer/: index.ts  judgeInfo.ts
src/task/submission/traditional/: index.ts  judgeInfo.ts
